--- a/previous-workshops/2019.md
+++ b/previous-workshops/2019.md
@@ -4,4 +4,6 @@ title: May 8-9, 2019 | Mount Saint Vincent University, Halifax NS
 permalink: /2019/
 ---
 
-# {{ page.title }}
+# May 8-9, 2019 | Mount Saint Vincent University, Halifax NS
+
+[Local Arrangements](/local-arrangements-2019)
