--- a/previous-workshops/2019.md
+++ b/previous-workshops/2019.md
@@ -4,6 +4,6 @@ title: May 8-9, 2019 | Mount Saint Vincent University, Halifax NS
 permalink: /2019/
 ---
 
-# {{ page.title }}
+### {{ page.title }}
 
 [Local Arrangements](/local-arrangements-2019)
