--- a/previous-workshops/2019.md
+++ b/previous-workshops/2019.md
@@ -6,5 +6,5 @@ permalink: /2019/
 
 ### {{ page.title }}
 
-[Local Arrangements](/local-arrangements-2019)
-[Training Materials](https://cudo.carleton.ca/dli-training/4345)
+- [Local Arrangements](/local-arrangements-2019)
+- [Training Materials](https://cudo.carleton.ca/dli-training/4345)
